# GenAI_EMS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md  openapi.json
infra/envs/dev/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/envs/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
scripts/: bootstrap-gcp.sh  db-migrate.sh  deploy.sh  export-openapi.py  rollback.sh
src/emergencypulse/: main.py
src/emergencypulse/api/: dependencies.py  errors.py  routes_auth.py  routes_dispatch.py  routes_health.py  routes_routes.py
src/emergencypulse/core/: config.py  logging.py  security.py
src/emergencypulse/db/: session.py
src/emergencypulse/db/migrations/: env.py
src/emergencypulse/db/migrations/versions/: 20260704_0001_initial_schema.py
src/emergencypulse/domain/: db_models.py  models.py
src/emergencypulse/repositories/: ambulance_repository.py
src/emergencypulse/services/: routing.py
tests/integration/: test_dispatch_api.py
tests/unit/: test_openapi_contract.py  test_route_api.py  test_routing.py
