[project]
name = "emergencypulse"
version = "0.1.0"
description = "Emergency ambulance routing and dispatch API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "asyncpg==0.30.0",
    "bcrypt==4.1.3",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "orjson==3.10.6",
    "passlib==1.7.4",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy[asyncio]==2.0.31",
    "structlog==24.2.0",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "ruff==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emergencypulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require the local database",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008", "S101"]
